# agent-first-http

./: .gitignore  Cargo.toml  README.md  clippy.toml  coverage-policy.json  spore.core.json
.github/workflows/: ci.yml  ops-takeover.yml  release.yml  takeover-panel.yml
assets/observation/: snapshot.js
assets/screencast-panel/: app.css  app.js  index.html
container/docker/: Dockerfile  Dockerfile.dockerignore  compose.yaml  entrypoint.sh  install-backends.sh
docs/: architecture.md  cli.md  deployment.md  design.md  mcp.md  overview.md  reference.md  testing.md
examples/: manual_display_takeover.rs  manual_screencast_takeover.rs
scripts/: coverage_gate.py  test-hooks.sh  test.sh  update.sh  upgrade.sh
skills/: agent-first-http.md
src/: chunked.rs  cli.rs  config.rs  curl_compat.rs  handler.rs  lib.rs  main.rs  mcp.rs  types.rs  websocket.rs  writer.rs
src/cli/: args.rs  mod.rs  output.rs
src/cli/cmd/: argenums.rs  capabilities.rs  cdp.rs  container.rs  fetch.rs  health.rs  host.rs  mod.rs  panel.rs  profile.rs  skill.rs  tabs.rs  takeover.rs  ui.rs  upload.rs
src/host/: bootstrap.rs  browser.rs  mod.rs
src/host/browser/: camoufox.rs  chromium.rs  lightpanda.rs  profile_launch.rs
src/host/display/: mod.rs
src/host/listener/: capabilities.rs  cdp_proxy.rs  diagnostics.rs  health.rs  mod.rs  ops_routes.rs  profile.rs  recent_requests.rs  takeover_routes.rs
src/host/ops_panel/: assets.rs  input_relay.rs  mod.rs  screencast.rs
src/host/takeover/: mod.rs
src/sdk/: capabilities.rs  client.rs  endpoint.rs  health.rs  inline.rs  mod.rs  takeover.rs
src/sdk/cdp/: mod.rs  session.rs  ws_client.rs
src/sdk/fetch/: deadline.rs  mod.rs  page_classification.rs  result.rs  wait.rs  writer.rs
src/sdk/fetch/artifacts/: body.rs  collectors.rs  console.rs  content.rs  mod.rs  network.rs  network_bodies.rs  observation.rs  rendered_html.rs  screenshot.rs  storage.rs  text.rs
src/sdk/fetch/pipeline/: browser.rs  cookie_jar_resolve.rs  http_only.rs  mod.rs  request_opts.rs
src/sdk/fetch/pipeline/browser/: capture.rs  download.rs  mod.rs  navigate.rs  network_bodies.rs  wait.rs
src/sdk/profile/: cookie_jar.rs  info.rs  lock.rs  meta.rs  mod.rs  paths.rs
src/shared/: artifacts.rs  contract_tests.rs  envelope.rs  error.rs  ids.rs  mod.rs  path.rs  profile_snapshot.rs  redact.rs  time.rs
tests/: Dockerfile.test  Dockerfile.test.dockerignore  browser_fetch.rs  build.sh  camoufox_foxbridge.rs  cdp_proxy.rs  check_regressions.sh  chrome_shell_capabilities.rs  cli_stress.py  cookie_jar.rs  cookie_jar_isolation.rs  coverage_stress.rs  display_takeover.rs  env_isolation.rs  fetch_http_only.rs  fingerprint_chromium.rs  health_capabilities.rs  host_extras.rs  lightpanda_backend.rs  manual-display-takeover.sh  manual-screencast-takeover.sh  network_artifact.rs  ops_panel_live.rs  ops_panel_two_browser.rs  proxy_tls.rs  regressions.txt  retry_backoff.rs  run-in-docker.sh  server.py  storage_artifact.rs  stress.py  tabs_management.rs  test.sh  unix_listener.rs  ws_server.py  ws_stress.py
tests/golden/: cli-command-flags.txt  fetch-success.json
tests/support/: env.rs  fixture_server.rs  mod.rs
