[package]
name = "agent-first-http"
version = "0.4.2"
edition = "2021"
description = "Persistent HTTP client for AI agents — one request, one JSON line"
license = "MIT"
repository = "https://github.com/cmnspore/agent-first-http"
readme = "README.md"
exclude = [".github/"]

[[bin]]
name = "afhttp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = [
    "json", "rustls", "gzip", "brotli", "deflate",
    "multipart", "stream", "socks", "http2"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
agent-first-data = { version = "0.7", features = ["cli-help", "cli-help-markdown"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"
