[package]
name = "agent-first-http"
version = "0.5.0"
edition = "2021"
description = "A URL acquisition tool for AI agents — give it a URL, get back the rendered page and the artifacts (HTML, screenshot, network and console logs, DOM observation) an agent needs to decide what to do next."
license = "MIT"
repository = "https://github.com/agentfirstkit/agent-first-http"
readme = "README.md"
exclude = [".github/", "container/", "tests/Dockerfile.test", "tests/Dockerfile.test.dockerignore"]

[[bin]]
name = "afhttp"
path = "src/main.rs"
required-features = ["cli"]

[[example]]
name = "manual_screencast_takeover"
required-features = ["host"]

[[example]]
name = "manual_display_takeover"
required-features = ["host"]

[features]
default = ["sdk", "cli"]
sdk = []
host = [
    "dep:chromiumoxide",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:hyper",
    "dep:hyper-util",
]
cli = ["sdk", "host", "dep:clap", "agent-first-data/cli-help", "agent-first-data/cli-help-markdown"]

[dependencies]
# SDK floor — always compiled.
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
reqwest = { version = "0.13", default-features = false, features = [
    "json", "rustls-no-provider", "gzip", "brotli", "deflate", "stream", "http2", "multipart", "form"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
futures = "0.3"
dirs = "6"
humantime = "2"
mime_guess = "2"
fs2 = "0.4"
tempfile = "3"
url = "2"
thiserror = "2"

# Host feature deps — chromiumoxide + the axum listener stack.
chromiumoxide = { version = "0.9", optional = true, default-features = false }
axum = { version = "0.8", optional = true, features = ["ws", "macros"] }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", optional = true, features = ["fs", "trace"] }
hyper = { version = "1", optional = true, features = ["full"] }
hyper-util = { version = "0.1", optional = true, features = ["server-auto", "tokio"] }

# SDK floor — used for URL secret redaction (redact_url_secrets); the cli-help
# features are enabled only by the `cli` feature.
agent-first-data = { version = "0.10", default-features = false }
# CLI feature deps.
clap = { version = "4", optional = true, features = ["derive"] }
cookie = "0.18"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
axum = { version = "0.8", features = ["ws", "macros"] }
filetime = "0.2"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"
